[package]
name = "mil"
version = "0.1.4-alpha.0"
authors = ["Jay Butera <buterajay@protonmail.com>"]
edition = "2018"

description = "Intermediate language for the MelVM"
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/mil"


[dependencies]
nom = "7.1.0"
hex = "0.4.3"
im = "15.0.0"
anyhow = "1.0.42"
genawaiter = "0.99.1"
ethnum = "1.0.3"
themelio-stf = "0.5.1"
#themelio-stf = { path = "../themelio-stf" }
tmelcrypt= "0.1.0"
#tmelcrypt = { path = "../themelio-core/libs/tmelcrypt" }
primitive-types = { version = "0.10.1", default-features = false }
structopt = { version = "0.3.22", default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
log="0.4"
env_logger = "0.9.0"
