[package]
name = "mil"
version = "0.2.2"
authors = ["Jay Butera <buterajay@protonmail.com>"]
edition = "2018"

description = "Intermediate language for the MelVM"
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/mil"


[dependencies]
nom = "7.1.0"
hex = "0.4.3"
imbl = "1"
anyhow = "1.0.42"
genawaiter = "0.99.1"
ethnum = "1.0.3"
themelio-stf = "0.7.8"
tmelcrypt= "0.2.3"
primitive-types = { version = "0.10.1", default-features = false }
structopt = { version = "0.3.22", default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
log="0.4"
env_logger = "0.9.0"
tap = "1.0.1"
nom-packrat = "0.6.0"

[dev-dependencies]
catvec = "0.1.6"

[target.'cfg(fuzzing)'.dependencies] 
honggfuzz= "0.5.54"
env_logger= "0.8.4"
