[package]
name = "mil"
version = "0.4.1"
authors = ["Jay Butera <buterajay@protonmail.com>"]
edition = "2018"

description = "Intermediate language for the MelVM"
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/mil"


[dependencies]
nom = "7.1.1"
hex = "0.4.3"
anyhow = "1.0.57"
genawaiter = "0.99.1"
ethnum = "1.2.1"
themelio-stf = { version = "0.11", features = ["print"] }
#themelio-stf = { path = "../themelio-stf", features = ["print"] }
themelio-structs = "0.2.4"
tmelcrypt= "0.2.4"
primitive-types = { version = "0.11.1", default-features = false }
structopt = { version = "0.3.26", default-features = false }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
log= "0.4.17"
env_logger = "0.9.0"
tap = "1.0.1"
nom-packrat = "0.6.0"
once_cell = "1.14.0"
 
[dev-dependencies]
catvec = "0.1.6"

[target.'cfg(fuzzing)'.dependencies] 
honggfuzz= "0.5.54"
env_logger= "0.9.0"
